task 1.10 work in progress, bug: Modal not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,20 @@
-.list-item, h1 {
+.btn-primary, h1 {
   font-family: "Architects Daughter", cursive;
   font-weight: 600;
-  text-align: center;
   letter-spacing: 2px;
-}
-
-.list-item:active, .list-item:hover {
-  box-shadow: inset 0 0 30px 5px white;
-  box-shadow: 0 0 5px 1px rgb(252, 252, 241);
 }
 
 /* ---------------------------------- */
 /*            base settings           */
 /* ---------------------------------- */
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 16px;
-}
-
 body {
   background-color: rgba(70, 108, 152, 0.8392156863);
   font-weight: 500;
-  line-height: 1.4;
   color: #323750;
 }
 
 h1 {
+  text-align: center;
   background-color: #fac95f;
   width: 90%;
   padding: 5px 0;
@@ -39,157 +25,58 @@ h1 {
   box-shadow: inset 0 0 20px 5px #fdeac2;
 }
 
-ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding-inline-start: 0;
-  list-style-type: none;
+.list-container {
+  margin: 3%;
 }
 
-.list-item {
-  font-size: calc(10px + 1vw);
-  width: calc(90px + 6vw);
-  text-transform: capitalize;
-  background-color: #fef8e9;
-  color: #323750;
-  padding: 5px 10px;
-  margin: 1.2vw 0.6vw;
+.list-group-item {
+  background-color: inherit;
   border-style: none;
-  white-space: nowrap;
+}
+
+.btn-primary {
+  text-transform: capitalize;
+  border-style: none;
   border-radius: 5% 20% 5% 5%;
-  box-shadow: inset 0 0 3px 1px rgb(252, 252, 241);
-  transition: all 0.15s ease-in-out 0s;
-}
-.list-item:hover {
-  background: white;
-}
-.list-item:active {
+  width: calc(60px + 7vw);
+  font-size: calc(7px + 1.1vw);
+  padding: 0.5vw;
+  color: #323750;
   background-color: #fef8e9;
-}
-
-html,
-body {
-  font-family: Arial, sans-serif;
-}
-
-#modal-container {
-  position: fixed;
-  padding: 20px;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  /* to show it above other content */
-  z-index: 999;
-  /* to allow scrolling if the screen is not high enough*/
-  overflow: auto;
-  /* this is used to center the modal */
-  display: grid;
-  text-align: center;
-}
-
-.modal {
-  margin: auto;
-  display: inline-block;
-  box-sizing: border-box;
-  background: #fff;
-  padding: 15px;
-  width: 100%;
-  max-width: 550px;
-  text-align: left;
-}
-
-.modal-close {
-  float: right;
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
-  color: #777;
-  text-decoration: underline;
-}
-
-.modal h1 {
-  text-transform: capitalize;
-  margin-top: 35px;
-  font-size: calc(20px + 1.1vw);
-}
-
-.modal div {
-  background-color: rgb(245, 244, 244);
-  border: rgb(185, 185, 185) solid 1px;
-  text-align: center;
-  width: 80%;
-  margin-left: 10%;
-}
-
-.modal-image {
-  min-height: 120px;
-}
-
-table {
-  margin: 20px 0 20px 10%;
-}
-
-td {
-  font-size: calc(13px + 1vw);
-  text-transform: capitalize;
-}
-
-#modal-container {
-  display: none;
-}
-
-#modal-container.is-visible {
-  /* CSS for modal container - add your own desired CSS styles here */
-  display: block;
-}
-
-.emphasize {
-  font-family: "Architects Daughter", cursive;
-  font-weight: 800;
-  text-align: right;
-  padding-right: 10px;
 }
 
 /* ---------------------------------- */
 /*           media queries            */
 /* ---------------------------------- */
-@media screen and (max-width: 400px) {
-  h1 {
-    font-size: calc(12px + 3vw);
-    width: 70%;
-    margin-left: 15%;
-  }
+/*
+@media screen and (max-width:400px) { 
 
-  .list-item {
-    font-size: calc(5px + 2vw);
-    padding: 5px;
-    margin: 5px;
-  }
+    h1{
+        font-size: calc(12px + 3vw);
+        width: 70%;
+        margin-left: 15%;
+    }
+
+    .list-item{
+        font-size: calc($small + 2vw); 
+        padding: $small;
+        margin: $small;
+    }
 }
-@media screen and (min-width: 800px) {
-  .modal h1 {
-    margin-top: 35px;
-  }
 
-  .modal div {
-    background-color: rgb(245, 244, 244);
-    border: rgb(185, 185, 185) solid 1px;
-    text-align: center;
-    width: 70%;
-    margin-left: 15%;
-  }
+@media screen and (min-width:800px) { 
 
-  .modal-image {
-    min-height: 160px;
-  }
+    .modal h1 {
+        margin-top: 35px;
+    }
 
-  table {
-    margin: 20px 0 20px 15%;
-  }
+    table{
+        margin: 20px 0 20px 15%;
+    }
+
+
+
 }
+*/
 
 /*# sourceMappingURL=styles.css.map */
