--- a/scss/files/_media-queries.scss
+++ b/scss/files/_media-queries.scss
@@ -1,6 +1,7 @@
 /* ---------------------------------- */
 /*           media queries            */
 /* ---------------------------------- */
+/*
 @media screen and (max-width:400px) { 
 
     h1{
@@ -20,24 +21,13 @@
 
     .modal h1 {
         margin-top: 35px;
-        }
-        
-        .modal div {
-        background-color: $color-image;
-        border: $color-image-border solid $nano;
-        text-align: center;
-        width: 70%;
-        margin-left: 15%;
-        }
-        
-        .modal-image {
-        min-height: 160px;  
-        }
-
-        table{
-            margin: 20px 0 20px 15%;
-          }
+    }
+       
+    table{
+        margin: 20px 0 20px 15%;
+    }
           
         
    
 }
+*/
