--- a/scss/files/_variables.scss
+++ b/scss/files/_variables.scss
@@ -40,7 +40,6 @@ $huge:   30px;
 %basic-style {
     font-family: "Architects Daughter", cursive;
     font-weight: 600;
-    text-align: center;
     letter-spacing: 2px;
 }
 
